<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <ListView
        android:id="@+id/listview"
        android:layout_width="371dp"
        android:layout_height="485dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496" />

    <Button
        android:id="@+id/currOrderBackButton"
        android:layout_width="85dp"
        android:layout_height="48dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="299dp"
        android:layout_marginBottom="659dp"
        android:text="@string/BackButton"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currOrdertv"
        android:layout_width="171dp"
        android:layout_height="37dp"
        android:text="@string/CurrentOrderText"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/listview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.591"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47" />

    <TextView
        android:id="@+id/subtotaltv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="244dp"
        android:layout_marginTop="637dp"
        android:layout_marginBottom="75dp"
        android:text="@string/SubtotalText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/salesTaxToEdittv"
        android:layout_width="37dp"
        android:layout_height="20dp"
        android:layout_marginStart="332dp"
        android:layout_marginTop="661dp"
        android:layout_marginBottom="50dp"
        android:text="@string/DefaultPrice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/ordertotaltoedit"
        android:layout_width="37dp"
        android:layout_height="20dp"
        android:layout_marginStart="332dp"
        android:layout_marginTop="685dp"
        android:layout_marginBottom="26dp"
        android:text="@string/DefaultPrice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/subtotaltvToEdit"
        android:layout_width="36dp"
        android:layout_height="19dp"
        android:layout_marginBottom="2dp"
        android:text="@string/DefaultPrice"
        app:layout_constraintBottom_toTopOf="@+id/salesTaxToEdittv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toEndOf="@+id/subtotaltv" />

    <TextView
        android:id="@+id/ordertotaltv"
        android:layout_width="84dp"
        android:layout_height="18dp"
        android:layout_marginStart="236dp"
        android:layout_marginTop="685dp"
        android:layout_marginBottom="28dp"
        android:text="@string/OrderTotalText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/salesTaxtv"
        android:layout_width="75dp"
        android:layout_height="19dp"
        android:layout_marginStart="236dp"
        android:layout_marginTop="661dp"
        android:layout_marginBottom="51dp"
        android:text="@string/SalesTaxText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/placeOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/PlaceOrderButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/clearOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/ClearOrderButton"
        app:layout_constraintBottom_toTopOf="@+id/placeOrderButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>